changed around wordle game to try and get users to select the words, first time i cant see the word other than that its working fine